<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.aerospike</groupId>
    <artifactId>spring-data-aerospike</artifactId>
    <version>5.3.0</version>
    <name>Spring Data Aerospike</name>
    <organization>
        <name>Aerospike Inc.</name>
        <url>https://www.aerospike.com</url>
    </organization>

    <parent>
        <groupId>org.springframework.data.build</groupId>
        <artifactId>spring-data-parent</artifactId>
        <version>3.5.5</version>
    </parent>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <springdata.commons>3.5.6</springdata.commons>
        <spring-boot-starter-test>3.5.7</spring-boot-starter-test>
        <spring-cloud-starter-bootstrap>4.3.0</spring-cloud-starter-bootstrap>
        <spring-tx>6.2.12</spring-tx>
        <maven.javadoc.plugin>3.3.0</maven.javadoc.plugin>
        <maven.gpg.plugin>1.6</maven.gpg.plugin>
        <central.publishing.maven.plugin>0.9.0</central.publishing.maven.plugin>
        <aerospike-client-jdk8>9.2.0</aerospike-client-jdk8>
        <aerospike-reactor-client>9.0.5</aerospike-reactor-client>
        <aerospike-expression-dsl.version>0.3.0</aerospike-expression-dsl.version>
        <reactor-test>3.8.0</reactor-test>
        <embedded-aerospike>3.1.17</embedded-aerospike>
        <jodatime>2.14.0</jodatime>
        <lombok>1.18.42</lombok>
        <awaitility>4.3.0</awaitility>
        <logback.test>1.5.21</logback.test>
        <hibernate.validator>9.1.0.Final</hibernate.validator>
        <netty.version>4.2.7.Final</netty.version>
        <kryo.version>5.6.2</kryo.version>
        <apacheCommonsCodec.version>1.20.0</apacheCommonsCodec.version>
    </properties>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>Peter Milne</id>
            <name>Peter Milne</name>
            <email>peter@aerospike.com</email>
            <url>https://www.aerospike.com</url>
            <organization>Aerospike Inc.</organization>
            <organizationUrl>https://www.aerospike.com</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>-6</timezone>
        </developer>
        <developer>
            <id>Michael Zhang</id>
            <name>Michael Zhang</name>
            <email>mzhang@aerospike.com</email>
            <url>https://www.aerospike.com</url>
            <organization>Aerospike Inc.</organization>
            <organizationUrl>https://www.aerospike.com</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>-8</timezone>
        </developer>
        <developer>
            <id>Jeff Boone</id>
            <name>Jeff Boone</name>
            <email>jboone@aerospike.com</email>
            <url>https://www.aerospike.com</url>
            <organization>Aerospike Inc.</organization>
            <organizationUrl>https://www.aerospike.com</organizationUrl>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>-8</timezone>
        </developer>
        <developer>
            <id>Anastasiia Smirnova</id>
            <name>Anastasiia Smirnova</name>
            <email>asmirnova@playtika.com</email>
            <url>https://www.playtika.com</url>
            <organization>Playtika</organization>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+3</timezone>
        </developer>
        <developer>
            <id>Igor Ermolenko</id>
            <name>Igor Ermolenko</name>
            <email>iiermolenko@playtika.com</email>
            <url>https://www.playtika.com</url>
            <organization>Playtika</organization>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+3</timezone>
        </developer>
        <developer>
            <id>Yevhen Tsyba</id>
            <name>Yevhen Tsyba</name>
            <email>ytsyba@playtika.com</email>
            <url>https://www.playtika.com</url>
            <organization>Playtika</organization>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+3</timezone>
        </developer>
        <developer>
            <id>Sergii Karpenko</id>
            <name>Sergii Karpenko</name>
            <email>skarpenko@playtika.com</email>
            <url>https://www.playtika.com</url>
            <organization>Playtika</organization>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+3</timezone>
        </developer>
        <developer>
            <id>Eugene Rizhkov</id>
            <name>Eugene Rizhkov</name>
            <email>yrizhkov@aerospike.com</email>
            <url>https://www.aerospike.com</url>
            <organization>Aerospike</organization>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+3</timezone>
        </developer>
        <developer>
            <id>Roi Menashe</id>
            <name>Roi Menashe</name>
            <email>rmenashe@aerospike.com</email>
            <url>https://www.aerospike.com</url>
            <organization>Aerospike</organization>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>+3</timezone>
        </developer>
    </developers>

    <profiles>
        <!-- Default profile with extensive tests excluded, active by default -->
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <excludedGroups>extensive</excludedGroups>
            </properties>
        </profile>
        <!-- All tests -->
        <profile>
            <id>all-tests</id>
            <properties>
                <excludedGroups/>
            </properties>
        </profile>
    </profiles>

    <scm>
        <connection>scm:git:git://github.com/spring-projects/spring-data-aerospike.git</connection>
        <developerConnection>scm:git:ssh://git@github.com:aerospike/spring-data-aerospike.git</developerConnection>
        <url>https://github.com/aerospike/spring-data-aerospike</url>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.data</groupId>
                <artifactId>spring-data-commons</artifactId>
                <version>${springdata.commons}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-tx</artifactId>
                <version>${spring-tx}</version>
            </dependency>
            <dependency>
                <groupId>com.aerospike</groupId>
                <artifactId>aerospike-client-jdk8</artifactId>
                <version>${aerospike-client-jdk8}</version>
            </dependency>
            <dependency>
                <groupId>com.aerospike</groupId>
                <artifactId>aerospike-reactor-client</artifactId>
                <version>${aerospike-reactor-client}</version>
            </dependency>
            <dependency>
                <groupId>com.aerospike</groupId>
                <artifactId>aerospike-expression-dsl</artifactId>
                <version>${aerospike-expression-dsl.version}</version>
            </dependency>
            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>${jodatime}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok}</version>
            </dependency>
            <dependency>
                <groupId>com.esotericsoftware</groupId>
                <artifactId>kryo</artifactId>
                <version>${kryo.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${apacheCommonsCodec.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-commons</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-tx</artifactId>
        </dependency>
        <dependency>
            <groupId>com.aerospike</groupId>
            <artifactId>aerospike-client-jdk8</artifactId>
        </dependency>
        <dependency>
            <groupId>com.aerospike</groupId>
            <artifactId>aerospike-reactor-client</artifactId>
        </dependency>
        <dependency>
            <groupId>com.aerospike</groupId>
            <artifactId>aerospike-expression-dsl</artifactId>
        </dependency>
        <dependency>
            <groupId>com.esotericsoftware</groupId>
            <artifactId>kryo</artifactId>
        </dependency>
        <dependency>
            <groupId>commons-codec</groupId>
            <artifactId>commons-codec</artifactId>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-transport</artifactId>
            <version>${netty.version}</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-handler</artifactId>
            <version>${netty.version}</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-transport-native-epoll</artifactId>
            <version>${netty.version}</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-transport-native-kqueue</artifactId>
            <version>${netty.version}</version>
        </dependency>
        <!--TEST dependencies-->
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-test</artifactId>
            <version>${reactor-test}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.playtika.testcontainers</groupId>
            <artifactId>embedded-aerospike</artifactId>
            <version>${embedded-aerospike}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-bootstrap</artifactId>
            <version>${spring-cloud-starter-bootstrap}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>${spring-boot-starter-test}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.awaitility</groupId>
            <artifactId>awaitility</artifactId>
            <version>${awaitility}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.test}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.test}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>${hibernate.validator}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration combine.self="override"/>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.javadoc.plugin}</version>
                <configuration>
                    <doclint>none</doclint>
                    <reportOutputDirectory>${basedir}</reportOutputDirectory>
                    <doctitle>Spring Data Aerospike</doctitle>
                    <show>public</show>
                    <splitindex>true</splitindex>
                    <bottom>Copyright © 2020–{currentYear} Aerospike, Inc. All rights reserved.</bottom>
                    <sourcepath>${basedir}/src/main/java</sourcepath>
                    <source>17</source>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven.gpg.plugin}</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>properties</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                        <include>**/*Tests.java</include>
                    </includes>
                    <excludedGroups>${excludedGroups}</excludedGroups>
                    <argLine>
                        <!--suppress UnresolvedMavenProperty -->
                        <!-- Property is generated at build-time by maven-dependency-plugin -->
                        -javaagent:${org.mockito:mockito-core:jar}
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.net=ALL-UNNAMED
                        --add-opens java.base/java.math=ALL-UNNAMED
                        --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>${central.publishing.maven.plugin}</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>spring-libs-snapshot</id>
            <url>https://repo.spring.io/libs-snapshot</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>spring-plugins-release</id>
            <url>https://repo.spring.io/plugins-release</url>
        </pluginRepository>
    </pluginRepositories>
</project>
